# ward-service

./: .gitignore  main.py  pyproject.toml
utils/: db.py  ingest.py
