[project]
name = "ward-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "fastapi-cors>=0.0.6",
    "pdfplumber>=0.11.8",
    "psycopg2-binary>=2.9.11",
    "supabase>=2.27.0",
    "uvicorn>=0.40.0",
]
